data-testid added

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   </head>
   <body>
     <header>
-      <h1>My 2-Years Tech Goals</h1>
+      <h1 data-testid="header-title">My 2-Years Tech Goals</h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#goals">Goals</a></li>
-        <li><a href="#timeline">Timeline</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#resources">Resources</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <ul data-testid="navigation">
+        <li><a href="#introduction" data-testid="nav-introduction">Introduction</a></li>
+        <li><a href="#goals" data-testid="nav-goals">Goals</a></li>
+        <li><a href="#timeline" data-testid="nav-timeline">Timeline</a></li>
+        <li><a href="#skills" data-testid="nav-skills">Skills</a></li>
+        <li><a href="#projects" data-testid="nav-projects">Projects</a></li>
+        <li><a href="#resources" data-testid="nav-resources">Resources</a></li>
+        <li><a href="#contact" data-testid="nav-contact">Contact</a></li>
       </ul>
     </nav>
-    <section id="introduction">
+    <section id="introduction" data-testid="section-introduction">
       <h2>Introduction</h2>
       <p>
         My journey into the world of programming began with my curiosity about
@@ -32,17 +32,17 @@
         eagerly immersed myself in learning as much as I can.
       </p>
     </section>
-    <section id="goals">
+    <section id="goals" data-testid="section-goals">
       <h2>Goals</h2>
       <ul>
-        <li>
+        <li data-testid="goal-1">
           My goal is to become proficient in JavaScript, React and Next.js
         </li>
-        <li>Conribute to open source projects</li>
-        <li>To build a personal portfolio website</li>
+        <li data-testid="goal-2">Conribute to open source projects</li>
+        <li data-testid="goal-3">To build a personal portfolio website</li>
       </ul>
     </section>
-    <section id="timeline">
+    <section id="timeline" data-testid="section-timeline">
       <h2>Timeline</h2>
       <p>Here's my roadmap:</p>
       <ul>
@@ -59,7 +59,7 @@
         </li>
       </ul>
     </section>
-    <section id="skills">
+    <section id="skills" data-testid="section-skills">
         <h2>Skills</h2>
         <ul>
             <li>JavaScript</li>
@@ -68,7 +68,7 @@
             <li>typeScript</li>
         </ul>
     </section>
-    <section id="projects">
+    <section id="projects" data-testid="section-projects">
         <h2>Projects</h2>
            <ul>
             <li>Open-source contribution</li>
@@ -76,7 +76,7 @@
             <li>E-commerce projects</li>
            </ul>
     </section>
-    <section id="resources">
+    <section id="resources" data-testid="section-resources">
         <h2>Resources</h2>
          <ul>
             <li>Freecodecamp</li>
@@ -84,9 +84,9 @@
             <li>Youtube</li>
          </ul>
     </section>
-    <section id="contact">
+    <section id="contact" data-testid="section-contact">
         <h2>Contact</h2>
-        <p>You can contact me on <a href="mailto:shakirattaiwo6@gmail.com">shakirattaiwo6@gmail.com</a></p>
+        <p>You can contact me on <a href="mailto:shakirattaiwo6@gmail.com" data-testid="contact-email">shakirattaiwo6@gmail.com</a></p>
     </section>
   </body>
 </html>
