--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 data-testid="header-title">My 2-Years Tech Goals</h1>
     </header>
     <nav>
-      <ul data-testid="navigation">
+      <ul data-testid="navigation" class="option-navigation">
         <li><a href="#introduction" data-testid="nav-introduction">Introduction</a></li>
         <li><a href="#goals" data-testid="nav-goals">Goals</a></li>
         <li><a href="#timeline" data-testid="nav-timeline">Timeline</a></li>
