feature:image adjustment

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       <p data-testid="currenTimeUTC" id="utc-time-display">Current UTC Time:</p>
       <p data-testid="currentDay" id="day-display">Current Day:</p>
     </header>
-    <img
+    <div class="image-container">
+      <img 
       data-testid="slackProfilePicture"
       src="https://ca.slack-edge.com/T07466B189M-U07ACFRRBBK-500670e2af50-72"
-      alt="image"
+      alt="Profile picture of Taiwo Shakirat"
       class="image"
     />
-    <p data-testid="slackName" class="name">Shakirat Taiwo</p>
+    <p data-testid="slackName" class="name">Taiwo Shakirat</p>
+    </div>
+    
     <nav>
       <ul data-testid="navigation" class="option-navigation">
         <li>
