--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="image-container">
       <img 
       data-testid="slackProfilePicture"
-      src="https://ca.slack-edge.com/T07466B189M-U07ACFRRBBK-500670e2af50-72"
-      alt="Profile picture of Taiwo Shakirat"
+      src="https://ca.slack-edge.com/T07466B189M-U07ACFRRBBK-500670e2af50-192"
+      alt="Profile picture of Shakirat Taiwo"
       class="image"
     />
-    <p data-testid="slackName" class="name">Taiwo Shakirat</p>
+    <p data-testid="slackName" class="name">Shakirat Taiwo</p>
     </div>
     
     <nav>
